Tests/a1/reject/16.ul
int main (int x) {
	chr '';
}